WT-13574: Fix WTableView header alignment
Fix the header alignment in WTableView when alining to the right or to
the center.

--- a/resources/themes/bootstrap/2/wt.less
+++ b/resources/themes/bootstrap/2/wt.less
@@ -681,8 +681,12 @@ body.Wt-rtl {
 
   white-space: nowrap;
 
-  .Wt-header .Wt-tv-c {
-    padding-left: 6px;
+  .Wt-header .Wt-label {
+    padding-inline: 3px;
+  }
+
+  .Wt-header div[style*="text-align:center;"] .Wt-tv-sh ~ .Wt-label {
+    padding-inline: 16px 0px;
   }
 
   .Wt-tv-contents {
