--- a/resources/themes/bootstrap/3/wt.less
+++ b/resources/themes/bootstrap/3/wt.less
@@ -674,9 +674,12 @@ body.Wt-rtl {
 .Wt-tableview {
   white-space: nowrap;
 
-  .Wt-header .Wt-tv-c {
-    padding-left: 6px;
-    margin-left: 6px; /*bootstrap 3 border box*/
+  .Wt-tableview .Wt-header .Wt-label {
+    padding-inline: 3px;
+  }
+
+  .Wt-header div[style*="text-align:center;"] .Wt-tv-sh ~ .Wt-label {
+    padding-inline: 16px 0px;
   }
 
   .Wt-tv-contents {
